--- a/lib/hlubchat_web/templates/page/index.html.eex
+++ b/lib/hlubchat_web/templates/page/index.html.eex
@@ -1,2 +1,2 @@
 <div id="messages"></div>
-<input id="chat-input" type="text"></input>
+<input id="chat-input" type="text" placeholder="say something..."></input>
