--- a/lib/hlubchat_web/templates/layout/app.html.eex
+++ b/lib/hlubchat_web/templates/layout/app.html.eex
@@ -12,7 +12,18 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
+            <%= if @conn.assigns[:current_user] do %>
+              <li>
+                <%= link "Sign Out", to: Routes.auth_path(@conn, :signout) %>
+              </li>
+            <% else %>
+              <li>
+              <%= link "Sign in with Facebook", to: Routes.auth_path(@conn, :request, "facebook") %>
+              </li>
+              <li>
+              <%= link "Sign in with Github", to: Routes.auth_path(@conn, :request, "github") %>
+              </li>
+            <% end %>
           </ul>
         </nav>
         <a href="http://phoenixframework.org/" class="phx-logo">
