updated env variable

--- a/lib/hlubchat_web/templates/layout/app.html.eex
+++ b/lib/hlubchat_web/templates/layout/app.html.eex
@@ -37,5 +37,7 @@
       <%= render @view_module, @view_template, assigns %>
     </main>
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+    <script type='text/javascript' src='/js/config.js'></script>
+    <script type='text/javascript' src='/js/script.js'></script>
   </body>
 </html>
